--- a/src/InfoContainer.css
+++ b/src/InfoContainer.css
@@ -5,9 +5,29 @@
   padding: 5px;
 }
 
-.closeBtnContainer {
+.infoTextIconContainer {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.IconContainer {
   flex: 1;
-  margin-right: 10px;
-  position: absolute;
-  right: 0;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.infoTextContainer {
+  flex: 9;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.textInfoContainer {
+  width: 35%;
+  font-size: 12px;
+  font-style: italic;
+  justify-content: flex-start;
+  align-content: flex-end;
 }
